# meter-daily-csv-to-google-form

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  test.py
.github/workflows/: black.yml  ci.yml  pages.yml
docs/: index.html  index.md
docs/_layouts/: default.html
test/: HDF_DailyDNP_kWh_01234567890_20-12-2024.csv  HDF_Daily_kWh_01234567890_20-12-2024.csv  HDF_Daily_kWh_01234567890_26-12-2024.csv
