[tool.poetry]
name = "meter-daily-csv-to-google-form"
version = "0.1.0"
description = "A script to parse CSV files and post data to a Google Form"
authors = ["Sean Condon <scondo01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
requests = "^2.26.0"
loguru = "^0.5.3"
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
