[tool.poetry]
name = "meter-daily-csv-to-spreadsheet"
version = "0.1.0"
description = "A script to parse HDF meter daily files and create a spreadsheet"
authors = ["Sean Condon <scondo01@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
requests = "^2.26.0"
loguru = "^0.7.3"
flake8 = "7.1.1"
pytest = "^8.3.0"
odfpy = "^1.4.1"
openpyxl = "^3.0.9"
numpy = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
